versioned_docs/version-4.8/getting-started/installing-solidus.mdx
---
sidebar_position: 1
needs-diataxis-rewrite: true
---

# Installing Solidus

This guide will teach what each you how to install Solidus and configure Solidus in a new or
existing Rails application.

## System requirements

Solidus requires the following software on the host to run properly:

* [Ruby](https://www.ruby-lang.org) interpreter: Solidus always supports the oldest maintained Ruby
branch.
* [Rails](https://www.rubyonrails.org): Solidus always supports the oldest maintained Rails version.
* Relational database: the core and the extensions are always tested
with [MySQL](https://www.mysql.com) and [PostgreSQL](https://www.postgresql.org), but other
relational databases should work as well.
* [libvips](https://github.com/libvips/libvips) or
[ImageMagick](http://imagemagick.org/script/download.php): this is needed for
manipulating product images and other assets. You need one or the other,
depending on the [configured variant
processor](https://guides.rubyonrails.org/configuring.html#config-active-storage-variant-processor).
* To run Solidus in conjunction with an external CDN you will have to do some configuration steps outlined below.

## Library architecture

Solidus has been designed as an ecosystem of independent libraries (_gems_, in the Ruby world) that
work well in isolation, but collaborate to give you an amazing eCommerce experience when used
together. A standard Solidus installation is composed of the following gems:

* [solidus\_core](https://github.com/solidusio/solidus/tree/master/core): provides the core data
models and eCommerce business logic. This is the bare minimum for a Solidus install.
* [solidus\_backend](https://github.com/solidusio/solidus/tree/master/backend): provides the
standard Solidus backend, a powerful administrative UI you can use to manage your Solidus store.
* [solidus\_api](https://github.com/solidusio/solidus/tree/master/api): provides the Solidus REST
API. The API is required by the backend, but you may also use it for your own purposes (e.g. for
JS interactions in the storefront).

Besides, Solidus aims to be agnostic of the storefront. We provide
[solidus\_starter\_frontend](https://github.com/solidusio/solidus_starter_frontend)
as a bootstrap solution from which a tailored store can be built. Otherwise,
you can create your storefront from scratch using whatever technology you
prefer.

For maximum flexibility, you can decide you just want to install specific gems and build the rest of
the functionality yourself. Or, if you want the full-fledged Solidus experience, you can install
the [solidus](https://github.com/solidusio/solidus) gem, which ties them all together and will give
you a complete store. This is the approach we'll be following in this guide.

## Installation steps

### In a new app

Solidus depends on any different components and gems. Always keep an eye out to temporary changes due to updates to dependencies. If you feel something is not right checkout the readme file in the Solidus repository. 

If you don't have an existing Ruby on Rails application yet, simply create one with:

```bash
$ rails new -T amazing_store
```

:::info

This command will generate a new Rails application in the `amazing_store` directory. This application
will be using Sqlite3 as the database adapter by default and will skip generating default test files
(via the `-T` option). If you want to see all the installation options offered by Rails, run `rails new --help`.

:::

Once you have generated your new Rails application, you can proceed as if you were installing
Solidus [in an existing app](#in-an-existing-app).

### In an existing app

If you have an existing Ruby on Rails application, installing Solidus is fairly simple. In your CLI:

```bash
$ bundle add solidus
$ bin/rails generate solidus:install
```

:::info

If you want to see all the installation options offered by Solidus, run `bin/rails generate solidus:install --help`.

:::

The installer will prompt you on a few questions before completing the
installation:

- Which storefront you want to install. We
provide a ready-to-use template called
[solidus\_starter\_frontend](https://github.com/solidusio/solidus_starter_frontend)
to quickly get up and running. There's also the option to choose
no storefront and build your own.
- What payment service you would like to install with Solidus. Currently,
it comes packaged with
[Paypal](https://github.com/solidusio/solidus_paypal_commerce_platform/),
[Stripe](https://github.com/solidusio/solidus_stripe/) and
[Braintree](https://github.com/solidusio/solidus_braintree) but you can also
choose to start without a payment service via the "none" option and add one later.
If you choose one, remember to check their READMEs for additional configuration steps.

Once the installation has completed, you can now start your Rails server:

```bash
$ bin/rails server
```

You should now be able to access your storefront at [http://localhost:3000](http://localhost:3000).
You can also access Solidus' admin UI at [http://localhost:3000/admin](http://localhost:3000/admin)
with the default credentials (email: `admin@example.com`, password: `test123`).

## First-time configuration

Once Solidus has been installed, you can get a feel of its configuration options by looking at the
generated initializer in `config/initializers/spree.rb`.

The very first line on it will be very similar to this one:

```ruby
Spree.load_defaults '4.4'
```

Some of the default values for Solidus preferences depend on the Solidus version. That line makes
sure you use the defaults for the version you have just installed.

:::info

You'll have to bump the loaded version when
you [upgrade to a new Solidus version](/upgrading-solidus/index.mdx#updating-preferences).

:::

Right after that, you'll see a block for the preferences that apply to the core component:

```ruby
Spree.config do |config|
  config.currency = "USD"
  # ...
end
```

Take a look at
the [`Spree::AppConfiguration`](https://github.com/solidusio/solidus/blob/master/core/lib/spree/app\_configuration.rb)
class for all the available settings. You can adjust some of them now, but you will probably want to
revisit them as you develop your store and customize Solidus to fit your needs.

Finally, the initializer contains a block for all the other components you have installed. For
instance:

```ruby
Spree::Api::Config.configure do |config|
  config.requires_authentication = true
end
```

Just like for the core,
see [`Spree::ApiConfiguration`](https://github.com/solidusio/solidus/blob/master/api/lib/spree/api\_configuration.rb)
and [`Spree::BackendConfiguration`](https://github.com/solidusio/solidus/blob/master/backend/lib/spree/backend\_configuration.rb)
for the complete list of settings.

:::info

You can inspect the current values for the settings running `Spree::Config` for core
and `Spree::Backend::Config` or `Spree::Api::Config` for the backend and API components,
respectively, in the console.

:::

## CDNs and Active Storage

By default, Active Storage assumes private access to services. This means generating signed, single-use URLs for blobs. If you'd rather make blobs publicly accessible, specify public: true in your app's config/storage.yml.

```
gcs: &gcs
  service: GCS
  project: ""

private_gcs:
  <<: *gcs
  credentials: <%= Rails.root.join("path/to/private_key.json") %>
  bucket: your_own_bucket-<%= Rails.env %>

public_gcs:
  <<: *gcs
  credentials: <%= Rails.root.join("path/to/public_key.json") %>
  bucket: your_own_bucket-<%= Rails.env %>
  public: true
```
